# dynamic-graph

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deploy/langfuse/: .env.example  docker-compose.yml
dynamic_graph/: __init__.py  cli.py
dynamic_graph/agents/: __init__.py  critic.py  forecaster.py  master.py  quant.py  research.py  schemas.py
dynamic_graph/config/: __init__.py  settings.py
dynamic_graph/connectors/: __init__.py  _dates.py  _http.py  brave.py  contracts.py  exa.py  fakes.py  fetch.py  observed.py
dynamic_graph/domain/: __init__.py  artifacts.py  budget.py  forecasts.py  graph.py  questions.py
dynamic_graph/examples/: __init__.py  hormuz.py
dynamic_graph/llm/: __init__.py  anthropic.py  client.py  observed.py  openai.py  pricing.py
dynamic_graph/observability/: __init__.py  events.py  langfuse.py  runtime.py
dynamic_graph/prompts/: critic.md  forecast.md  master.md  quant.md  research.md
dynamic_graph/quant/: __init__.py  context.py  executor.py  observed.py  outputs.py  workspace.py
dynamic_graph/runtime/: __init__.py  admission.py  langgraph_app.py  reducers.py  scheduler.py
dynamic_graph/validation/: __init__.py  final.py
scripts/: langfuse_smoke.py
tests/: fakes.py  test_admission.py  test_connectors_fake.py  test_dynamic_graph_smoke.py  test_master_fallback.py  test_observability.py  test_quant_workbench.py  test_validation.py
