[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamic-graph"
version = "0.1.0"
description = "A small, genuinely dynamic LangGraph forecasting agent with mandatory Langfuse observability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "langgraph>=1.0,<2.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "rich>=13.7.0",
    "langfuse>=3.0,<5.0",
    # quant workbench scientific stack
    "duckdb>=1.2.0",
    "polars>=1.20.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "lifelines>=0.30.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
# Heavier modelling libraries the quant agent may use when installed.
# Kept optional so the base install and tests stay fast; the quant context
# reports which packages are actually importable, so the agent only uses
# what is present.
bayes = ["pymc>=5.16.0", "arviz>=0.19.0"]
viz = ["plotly>=5.24.0"]

[project.scripts]
dynamic-graph = "dynamic_graph.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
